--- a/frontend/src/CSS/AnimalForm.css
+++ b/frontend/src/CSS/AnimalForm.css
@@ -7,8 +7,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 20px;  
     box-sizing: border-box;
+    
   }
   
   .form-content {
@@ -19,15 +20,32 @@
     max-width: 600px;
     width: 100%;
   }
+  .flex-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1em;
+  }
+  
+  .flex-label {
+    width: 20%;
+    margin-right: 1em;
+    font-weight: bold;
+  }
+  
+  .flex-input {
+    width: 80%;
+  }
   
   @media (max-width: 768px) {
     .animal-form-container {
-      height: auto;
-      padding: 40px 20px;
+        height: auto;
+        padding: 40px 20px;
+        justify-content: flex-start; /* Mobilde formun yukarıda kalmasını sağlar */
     }
-  
-    .form-content {
-      padding: 20px;
+
+    .animal-form-content {
+        padding: 20px;
+        margin-top: 20px; /* Mobilde daha az boşluk olabilir */
     }
-  }
+}
   
